--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "titleBar.inactiveBackground": "#242ff599",
     "titleBar.inactiveForeground": "#e7e7e799"
   },
-  "peacock.color": "#242ff5"
+  "peacock.color": "#242ff5",
+  "githubPullRequests.ignoredPullRequestBranches": ["main"]
 }
